--- a/config/virtual-host.conf
+++ b/config/virtual-host.conf
@@ -2,7 +2,7 @@
 <VirtualHost *:80>
   DocumentRoot "/var/www/html"
 
-  ServerName nishimu.com
+  ServerName sample.kakunin.dmm.com
 
   ErrorLog /var/log/nishimu.com_error_log
   CustomLog /var/log/nishimu.com_access_log combined env=!nolog
@@ -17,42 +17,3 @@
  </Directory>
 
 </VirtualHost>
-
-
-
-
-ServerName nishimu.com:443
-
-<VirtualHost *:443>
-  DocumentRoot "/var/www/html"
-
-  ServerName nishimu.com
-
-  ErrorLog /var/log/nishimu.com_error_log
-  CustomLog /var/log/nishimu.com_access_log combined env=!nolog
-
-  SetEnv APPLICATION_ENV developer
-
-  RewriteEngine On
-  RewriteRule ^(.*)$ /R408/$1? [L]
-
- SSLEngine on
- SSLCertificateFile /etc/apache2/ca/server.crt
- SSLCertificateKeyFile /etc/apache2/ca/server.key
- <Files ~ "\.(cgi|shtml|phtml|php3?)$">
-    SSLOptions +StdEnvVars
- </Files>
- BrowserMatch "MSIE [2-5]" \
-             nokeepalive ssl-unclean-shutdown \
-             downgrade-1.0 force-response-1.0
-    CustomLog logs/ssl_access_log ltsv_ssl
-
- <Directory "/var/www/html">
-    Require all granted
-    DirectoryIndex index.php index.html index.htm
-    AllowOverride All
-    Options Indexes FollowSymLinks SymLinksIfOwnerMatch
- </Directory>
-
-</VirtualHost>
-
