--- a/config/httpd.conf
+++ b/config/httpd.conf
@@ -164,7 +164,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
-LoadModule ssl_module modules/mod_ssl.so
+#LoadModule ssl_module modules/mod_ssl.so
 
 LoadModule negotiation_module modules/mod_negotiation.so
 
