update domain to `php-sample.com`.

--- a/config/virtual-host.conf
+++ b/config/virtual-host.conf
@@ -1,8 +1,8 @@
-# VirtualHost nishimu.com for php_web_module 
+# VirtualHost  for php_web_module
 <VirtualHost *:80>
   DocumentRoot "/var/www/html"
 
-  ServerName sample.kakunin.dmm.com
+  ServerName php-sample.com
 
   ErrorLog /var/log/nishimu.com_error_log
   CustomLog /var/log/nishimu.com_access_log combined env=!nolog
@@ -15,5 +15,4 @@
     AllowOverride All
     Options Indexes FollowSymLinks SymLinksIfOwnerMatch
  </Directory>
-
 </VirtualHost>
